fix nav bar issue where it won't open the toggler on smaller devices

--- a/css/style.css
+++ b/css/style.css
@@ -123,7 +123,8 @@
     height: 100%;
     width: 100%;
     background-blend-mode: darken;*/
-    background-color: #339adf ;
+    background-color: #339adf;
+
 }
 
 .homepage-body {
@@ -229,9 +230,7 @@
 
 
 /*--Gallery--*/
-    .gallery-hero{
-        
-    }
+    
 
     .gallery-hero h1 {
         font-family: 'Roboto', sans-serif;
